# python-ddd

./: .gitignore  FUTURE_IMPROVEMENTS.md  README.md  docker-compose.dev.yml  pyproject.toml
learning/: chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md  curriculum.md  improvements.md  repo-comparison.md
src/: seed.py
src/api/: dependencies.py  main.py
src/api/models/: bidding.py  catalog.py
src/api/routers/: bidding.py  catalog.py
src/api/tests/: test_bidding.py
src/cli/: README.md  __main__.py
src/config/: container.py
src/modules/bidding/application/: __init__.py
src/modules/bidding/application/command/: place_bid.py  retract_bid.py
src/modules/bidding/application/event/: notify_outbid_winner.py  when_listing_is_published_start_auction.py
src/modules/bidding/application/query/: get_bidding_details.py  model_mappers.py
src/modules/bidding/domain/: entities.py  rules.py
src/modules/bidding/infrastructure/: listing_repository.py
src/modules/bidding/tests/application/: test_presenters.py
src/modules/bidding/tests/domain/: test_bidding.py
src/modules/catalog/application/: __init__.py
src/seedwork/application/: commands.py  queries.py
src/seedwork/domain/: events.py
src/seedwork/foundation/: __init__.py  application.py  application_module.py  dependency_provider.py  testing.py  transaction_context.py  types.py
src/seedwork/tests/application/: test_application.py  test_application_and_one_module_branching.py  test_application_and_one_module_linear.py  test_application_with_outbox.py
src/web/: dependencies.py  router.py
src/web/templates/: base.html  catalog.html  create_listing.html  listing_details.html  login.html  register.html
(+8 files in other folders)
